gcp/deployment/load-balancer-service.yaml
# GCP Load Balancer Service Configuration
apiVersion: v1
kind: Service
metadata:
  name: devcycle-api-service
  namespace: default
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  - port: 443
    targetPort: 8000
    protocol: TCP
    name: https
  selector:
    app: devcycle-api
